--- a/templates/index.html
+++ b/templates/index.html
@@ -82,4 +82,5 @@
        </div>
        <a href="https://tbcbank.ge/ka/tbc-education" target="blank"><img src="../static/images/თიბისი.png" alt="Tbclogo"></a>
     </footer>
+    <script src="https://kit.fontawesome.com/44c8b205f8.js" crossorigin="anonymous"></script>
 {% endblock %}
