--- a/static/style.css
+++ b/static/style.css
@@ -240,7 +240,8 @@ body footer ul a {
   font-size: 25px;
 }
 body footer img {
-  width: 140px;
+  width: 200px;
   padding-right: 50px;
+  margin-top: 50px;
 }/*# sourceMappingURL=style.css.map */
 
