--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -5,92 +5,92 @@
 {% block href %}{{ url_for('static', filename='abotus.css') }}{% endblock %}
 {% block media %}{{ url_for('static', filename='Media css/aboutus.css') }}{% endblock %}
 {% block body %}
-    <header>
-        <nav>
-        </nav>
-    </header>
-    <H1 class="h1">About us</H1>
-    <main>
-        <img src="../static/images/logo1.png" alt="logo">
-        <p> GamersSpot შეიქმნა ქართული გეიმერებისთვის — სივრცე, სადაც თითოეულ მოთამაშეს შეუძლია იგრძნოს თავი ერთიან
-            გეიმინგ ოჯახში.
-            ჩვენი მიზანია შევქმნათ ძლიერი, მეგობრული და აქტიური კომუნითი, სადაც ერთმანეთს უზიარებთ გამოცდილებას,
-            ეჯიბრებით ტურნირებში და ერთად ვითარდებით ციფრულ სამყაროში.
-            <br>
-            <br>
-            🌟 ვინ ვართ ჩვენ?
-            ჩვენ ვართ ქართველი გეიმერების გუნდი, რომლებიც გეიმინგით ბავშვობიდან არიან გატაცებული. GamersSpot გაჩნდა
-            იდეით — "რატომ არ უნდა არსებობდეს ადგილი, სადაც ქართული გეიმინგ თემი თავს მოიყრის?"
-            ჩვენ ვაკეთებთ იმას, რაც გვიყვარს:
-            <br>
-            <br>
-            🎮 ვთამაშობთ,
-            <br>
-            <br>
-            💬 ვუზიარებთ ცოდნას,
-            <br>
-            <br>
-            🏆 ვაწყობთ ტურნირებს
-            და 🤝 ვქმნით ახალ მეგობრობებს!
-            <br>
-            <br>
-             GamersSpot-ის მისიაა:
-            <br>
-            <br>
-            🕹️ ხელი შეუწყოს ქართულ გეიმინგ თემს განვითარებაში
-            <br>
-            <br>
-            📢 გაავრცელოს სიახლეები, რჩევები და მიმოხილვები
-            <br>
-            <br>
-            🛡️ შექმნას უსაფრთხო და მეგობრული სივრცე ყველა გეიმერისთვის
-            <br>
+<header>
+    <nav>
+    </nav>
+</header>
+<H1 class="h1">About us</H1>
+<main>
+    <img src="../static/images/logo1.png" alt="logo">
+    <p> GamersSpot was created for Georgian gamers — a space where each player can feel like a united
+        gaming family.
+        Our goal is to create a strong, friendly and active community where you share experiences,
+        compete in tournaments and develop together in the digital world.
         <br>
-            💡 ღირებულებები
-            
-            თანასწორობა 🎮
-            
-            პატივისცემა 🤝
-            
-            ინოვაცია 🚀
-            
-            ერთიანობა 🇬🇪
-        </p>
-    </main>
+        <br>
+        🌟 Who are we?
+        We are a team of Georgian gamers who have been passionate about gaming since childhood. GamersSpot was born
+        with the idea — "Why shouldn't there be a place where the Georgian gaming community can gather?"
+        We do what we love:
+        <br>
+        <br>
+        🎮 We are playing,
+        <br>
+        <br>
+        💬 We share knowledge,
+        <br>
+        <br>
+        🏆 We organize tournaments
+        and 🤝 create new friendships!
+        <br>
+        <br>
+        GamersSpot's mission is to:
+        <br>
+        <br>
+        🕹️ To contribute to the development of the Georgian gaming community
+        <br>
+        <br>
+        📢 Distribute news, tips, and reviews
+        <br>
+        <br>
+        🛡️ To create a safe and friendly space for all gamers
+        <br>
+        <br>
+        💡 Values
 
-    <footer>
-        <div>
-            <ul>
-                <li>Navigation Links</li>
-                <li><a href="/">Home</a></li>
-                <li><a>About us</a></li>
-                <li><a href="/games">Games</a></li>
-                <li><a href="/tournaments">Tournaments</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-        </div>
-        <div>
-            <ul>
-                <li>Contact info</li>
-                <li>Email:<a href=""> GamersSpot@gmail.com</a></li>
-                <li>Phone: 555 555 555</li>
-                <li><a href="https://maps.app.goo.gl/xtt4rFRgwuWSLrXR6" target="_blank">Location</a></li>
-            </ul>
-        </div>
-        <div>
-            <ul>
-                <li>Social links</li>
-                <a href="https://discord.gg/GW7TzkXkB7" target="_blank"><i class="fa-brands fa-discord"> Discord</i></a>
-                <a href=""><i class="fa-brands fa-facebook"></i> Facebook</a>
-                <a href=""><i class="fa-brands fa-youtube"></i> Youtube</a>
-                <a href=""><i class="fa-brands fa-twitch" style="color: #B197FC;"></i> Twitch</a>
-            </ul>
-        </div>
-        <a href="https://tbcbank.ge/ka/tbc-education" target="blank"><img src="/static/images/თიბისი.png" alt="Tbclogo"></a>
-    </footer>
-    <script src="https://kit.fontawesome.com/44c8b205f8.js" crossorigin="anonymous"></script>
+        Equality 🎮
+
+        Respect 🤝
+
+        Innovation 🚀
+
+        Unity 🇬🇪
+    </p>
+</main>
+
+<footer>
+    <div>
+        <ul>
+            <li>Navigation Links</li>
+            <li><a href="/">Home</a></li>
+            <li><a>About us</a></li>
+            <li><a href="/games">Games</a></li>
+            <li><a href="/tournaments">Tournaments</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>Contact info</li>
+            <li>Email:<a href=""> GamersSpot@gmail.com</a></li>
+            <li>Phone: 555 555 555</li>
+            <li><a href="https://maps.app.goo.gl/xtt4rFRgwuWSLrXR6" target="_blank">Location</a></li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>Social links</li>
+            <a href="https://discord.gg/GW7TzkXkB7" target="_blank"><i class="fa-brands fa-discord"> Discord</i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i> Facebook</a>
+            <a href=""><i class="fa-brands fa-youtube"></i> Youtube</a>
+            <a href=""><i class="fa-brands fa-twitch" style="color: #B197FC;"></i> Twitch</a>
+        </ul>
+    </div>
+    <a href="https://tbcbank.ge/ka/tbc-education" target="blank"><img src="/static/images/თიბისი.png" alt="Tbclogo"></a>
+</footer>
+<script src="https://kit.fontawesome.com/44c8b205f8.js" crossorigin="anonymous"></script>
 {% endblock %}
-    <script src="https://kit.fontawesome.com/44c8b205f8.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/44c8b205f8.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
