--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
             {% endif %}
 
             {% if current_user.role == "Admin" %}
-            <a href="/add-game"><p>add game</p><i class="fa-solid fa-game-board" style="color: #ffffff; display: none;"></i></a>
+            <a href="/add-game"><p>add game</p><i class="fa-light fa-airplay-audio" style="color: #ffffff;"></i></i></a>
             <a href="/add-tournament"><p>add tournament</p><i class="fa-solid fa-chess" style="color: #ffffff; display: none;"></i></a>
             {%endif%}
             </div>
